--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,14 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
+    <h1>Welcome to Web Developmpent</h1>
+
+    <a href="labs/a1/index.html">Assignment 1</a>
+    <a href="labs/a2/index.html">Assignment 2</a>
+    <a href="Kanbas/index.html">Kanbas</a>
+
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
