--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -1,5 +1,12 @@
-<h1>Profile</h1>
+<h4>Jose Annunziato's Profile</h4>
+<hr />
+<br />
+<h1>Jose Annunziato</h1>
+<h2>Contact</h2>
+<p>No registered services, you can add some on the <a href="#">settings</a> page.</p>
+<h2>Biography</h2>
+<p>Faculty, Software Engineer, AI, Space, and renewables enthusiast.</p>
+<h2>Links</h2>
+<a href="#">YouTube</a>
 
-<form action="ProfileEditor/screen.html">
-    <button>Edit Profile</button>
-</form>
+
