--- a/public/Kanbas/Courses/Assignments/AssignmentEditor/editor.html
+++ b/public/Kanbas/Courses/Assignments/AssignmentEditor/editor.html
@@ -1,16 +1,121 @@
+<select>
+    <option>SpeedGrader</option>
+</select>
+<hr />
+
 <h3>Assignment Name</h3>
 
 <input value="A1 - ENV + HTML" />
 
 <br />
-
-<textarea cols="50" rows="10">This is the description of the assignment</textarea>
-
+<br />
+<textarea cols="50" rows="10">This is the assignment description.</textarea>
+<br />
+<br />
 <label for="points">Points</label> 
 <br />
 <input id="points" max="100" type="number" value="100">
 
 <br />
+<br />
+<label for="assign-group">Assignment Group</label>
+<br />
+<select id="assign-group">
+    <option>ASSIGNMENTS</option>
+    <option>QUIZZES</option>
+    <option>EXAMS</option>
+    <option>PROJECT</option>
+</select>
 
-<input id = "text-entry" type ="checkbox" /> 
-<label for="text-entry" >Text Entry</label>
+<br />
+<br />
+<label for="grade-type">Display Grade as</label>
+<br />
+<select id="grade-type">
+    <option>Percentage</option>
+</select>
+
+<br />
+<br />
+<label for="submit-type">Submission Type</label>
+<br />
+<select id="submit-type">
+    <option>Online</option>
+</select>
+<br />
+<br />
+
+
+<label>Online Entry Options</label>
+<br />
+<input type="checkbox" value="textEntry"
+ id="check-text" />
+<label for="check-text">Text Entry</label>    <br/>
+
+<input type="checkbox" value="websiteURL"
+ id="check-web" />
+<label for="check-web">Website URL</label>    <br/>
+
+<input type="checkbox" value="mediaRecordings"
+ id="check-recordings" />
+<label for="check-recordings">Media Recordings</label>    <br/>
+
+<input type="checkbox" value="studentAnnotation"
+ id="check-annotation" />
+<label for="check-annotation">Student Annotation</label>    <br/>
+
+<input type="checkbox" value="fileUpload"
+ id="check-file" />
+<label for="check-file">File Uploads</label>    <br/>
+
+<br />
+
+<label>Submission Attempts</label>
+<br />
+<select>
+    <option>Unlimited</option>
+</select>
+
+<br />
+<br />
+
+<label>Plagiarism Review</label>
+<br />
+<select>
+    <option>None</option>
+</select>
+
+<br />
+<br />
+
+<label>Group Assigment</label> <br />
+<input type="checkbox" value="groupAssignment"
+ id="check-group" />
+<label for="check-group">This is a group assignment</label>    <br/>
+
+<br />
+
+<label>Peer Reviews</label> <br />
+<input type="checkbox" value="peerReview"
+ id="check-peer" />
+<label for="check-peer">Require Peer Reviews</label>    <br/>
+<br />
+
+<label>Assign to</label> <br />
+<input value="Everyone"/>
+<br />
+<br />
+<label>Due</label> <br />
+<input type="date">
+<br />
+<br />
+<label>Available from</label> <br />
+<input type="date">
+<br />
+<br />
+<label>Until</label> <br />
+<input type="date">
+<br />
+<br />
+<a href="./index.html"><button>Cancel</button></a>
+<a href="./index.html"><button>Save</button></a>
