--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,13 @@
     
     <h1>Welcome to Web Developmpent</h1>
 
-    <a href="labs/a1/index.html">Assignment 1</a>
-    <a href="labs/a2/index.html">Assignment 2</a>
-    <a href="Kanbas/index.html">Kanbas</a>
+  <ul>
+    <li><a href="labs/a1/index.html">Assignment 1</a></li>
+    <li><a href="labs/a2/index.html">Assignment 2</a></li>
+    <li><a href="Kanbas/Courses/Home/home.html">Kanbas</a></li>
+  </ul>
 
-
-    <div id="root"></div>
+    <!-- <div id="root"></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
