--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     
-    <h1>Welcome to Web Developmpent</h1>
+    <h1>Welcome to Web Development</h1>
 
   <ul>
     <li><a href="labs/a1/index.html">Assignment 1</a></li>
