Minor style fixes

--- a/public/Kanbas/Account/Profile/account-nav.html
+++ b/public/Kanbas/Account/Profile/account-nav.html
@@ -127,6 +127,9 @@
             </ul>
         </div>
 
+        <div class="col ">
+            <a href="./index.html" class="float-right">X</a>
+          </div>
     </div>
 </div>
 
